<resources>
    <string name="app_name">RecycleTree</string>
    <string name="logo_description">Recycle Tree Logo</string>
    <string name="recycle">RECYCLE</string>
    <string name="tree">TREE</string>
    <string name="signup_logo_des">Sign Up Icon</string>
    <string name="existingAccount">Already have an existing account?</string>
    <string name="forgotPwd">Forgot Password?</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="change_password">Change Password</string>
    <string name="password">Password</string>
    <string name="repeat">Repeat</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password</string>
    <string name="description">Description</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="back_to_profile">Back to Profile</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_achievement">Achievement</string>
    <string name="logout">Logout</string>
    <string name="hello_home_fragment">Home</string>
    <string name="hello_location_fragment">Location</string>
    <string name="hello_recycle_fragment">Recycle</string>
    <string name="hello_guide_fragment">Guide</string>
    <string name="hello_statistic_fragment">Statistic</string>
    <string name="WaterDrop">Growth</string>
    <string name="point">Point</string>
    <string name="pie_title">Contribution of recycle things</string>
    <string name="ranking_title">Global Ranking</string>
    <string name="achievement_image">Achievement Image</string>
</resources>