<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/signIn_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/signup_logo_des"
            android:src="@drawable/login_icon_2" />

    </RelativeLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="40dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="70dp"
                android:layout_toEndOf="@+id/tv_emailLogin"
                android:background="@drawable/border"
                android:ems="10"
                android:fontFamily="@font/raleway_bold"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColorHint="#773E5475" />

            <TextView
                android:id="@+id/tv_emailLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/email"
                android:textColor="#3E5475"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/etPwdLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="35dp"
                android:layout_toEndOf="@+id/tv_pwdLogin"
                android:background="@drawable/border"
                android:ems="10"
                android:fontFamily="@font/raleway_bold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#773E5475" />

            <TextView
                android:id="@+id/tv_pwdLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/password"
                android:textColor="#3E5475"
                android:textSize="18sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="233dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:backgroundTint="#FE7D56"
                android:fontFamily="@font/justice_league"
                android:text="@string/sign_in"
                android:textSize="24sp"
                app:cornerRadius="10dp"
                app:strokeColor="#3E5475"
                app:strokeWidth="5dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/tv_ForgetPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/forgotPwd"
                android:textColor="#3E5475"
                android:fontFamily="@font/raleway_bold"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnForgetPwd"
                android:layout_width="233dp"
                android:layout_height="60dp"
                android:layout_below="@+id/tv_ForgetPwd"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#7E92FF"
                android:fontFamily="@font/justice_league"
                android:text="@string/forget_password"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:strokeColor="#3E5475"
                app:strokeWidth="5dp" />

        </RelativeLayout>

    </LinearLayout>



</LinearLayout>