<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:id="@+id/profile_fragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad1"
        android:paddingBottom="30dp">


        <RelativeLayout
            android:id="@+id/UserPicBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/circleborder">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/userImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="9dp"
                android:adjustViewBounds="true"
                android:background="@drawable/circle_profile"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_profile"
                app:shapeAppearanceOverlay="@style/circular"></com.google.android.material.imageview.ShapeableImageView>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:adjustViewBounds="true"
            android:background="@drawable/border_with_color">

            <ImageView
                android:id="@+id/waterIcon"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/water_drop1" />

            <TextView
                android:id="@+id/tv_points"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/waterIcon"
                android:gravity="center_vertical|right"
                android:text="0"
                android:textColor="#3E5475"
                android:textSize="16sp" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etUname_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="30dp"
                    android:layout_toEndOf="@+id/tv_uname_profile"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:fontFamily="@font/raleway_bold"
                    android:inputType="none"
                    android:editable="false"
                    android:text="@string/username"
                    android:textColorHint="#773E5475" />

                <TextView
                    android:id="@+id/tv_uname_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/username"
                    android:textColor="#3E5475"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/etEmail_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="70dp"
                    android:layout_toEndOf="@+id/tv_email_profile"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:fontFamily="@font/raleway_bold"
                    android:inputType="none"
                    android:editable="false"
                    android:text="@string/email_address"
                    android:textColorHint="#773E5475"
                    />

                <TextView
                    android:id="@+id/tv_email_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/email"
                    android:textColor="#3E5475"
                    android:textSize="18sp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/tv_Des"
                    android:background="@drawable/border"
                    android:editable="false"
                    android:ems="10"
                    android:fontFamily="@font/raleway_bold"
                    android:inputType="none"
                    android:lines="5"
                    android:maxLines="8"
                    android:minLines="4"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    android:text=""
                    android:textColorHint="#773E5475" />

                <TextView
                    android:id="@+id/tv_Des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/description"
                    android:textColor="#3E5475"
                    android:textSize="18sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/btnEditProfile"
                    android:layout_width="233dp"
                    android:layout_height="65dp"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="#FE7D56"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/edit_profile"
                    android:textSize="20sp"
                    app:cornerRadius="10dp"
                    app:strokeColor="#3E5475"
                    app:strokeWidth="5dp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btnChgPwd"
                    android:layout_width="233dp"
                    android:layout_height="65dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="#7E92FF"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/change_password"
                    android:textSize="17sp"
                    app:cornerRadius="10dp"
                    app:strokeColor="#3E5475"
                    app:strokeWidth="5dp" />

            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>

    </RelativeLayout>


</FrameLayout>